--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.19.1",
     "tailwind-merge": "^3.3.0"
   },
