--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
@@ -27,6 +28,7 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.19.1",
